Added maven-surefire-plugin for parallel execution of multiple tests (test execution time went down from 15.5 minutes to 7.3 minutes